--- a/masthead.html
+++ b/masthead.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alice&family=Architects+Daughter&family=Gotu&family=IM+Fell+English+SC&family=Lato:wght@300&family=Tenor+San&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
@@ -172,7 +171,7 @@
   <script>
     kofiWidgetOverlay.draw('overtlylit', {
       'type': 'floating-chat',
-      'floating-chat.donateButton.text': 'Support me',
+      'floating-chat.donateButton.text': 'Support us',
       'floating-chat.donateButton.background-color': '#F7F7F7',
       'floating-chat.donateButton.text-color': '#323842'
     });
