Twitter meta data
Added twitter meta data to the head section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@overtlylit" />
+    <meta name="twitter:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <meta name="twitter:creator" content="@safiyacherfi" />
 
   </head>
 <body class="home-body">
