--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <meta property="og:image:width" content="1200px"/> 
+    <meta property="og:image:height" content="675px"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
     <meta name="twitter:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <meta property="og:image:secure_url" content="https://overtlylit.com/images/overtly-logo.jpg" />
     <meta name="twitter:creator" content="@safiyacherfi" />
+    <meta name="twitter:title" content="Overtly Lit">
+    <meta name="twitter:description" content="An online literary magazine where faith meets art">
 
   </head>
 <body class="home-body">
