--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
-    <meta name="twitter:image:width" content="1200px"/> 
-    <meta name="twitter:image:height" content="675px"/>
+    <meta property="og:image:width" content="1200"/> 
+    <meta property="og:image:height" content="675"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
     <meta name="twitter:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
