--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:image:height" content="675"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <meta name="twitter:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/>
     <meta name="og:image:secure_url" content="https://overtlylit.com/images/overtly-logo.jpg" />
     <meta name="twitter:creator" content="@overtlylit" />
     <meta name="twitter:title" content="Overtly Lit">
