--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta name="twitter:title" content="Overtly Lit">
     <meta name="twitter:description" content="An online literary magazine where faith meets art">
 
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
   </head>
 <body class="home-body">
     
