--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/>
+    <!-- <meta name="twitter:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/> -->
     <meta name="twitter:creator" content="@overtlylit" />
     <meta name="twitter:title" content="Overtly Lit">
     <meta name="twitter:description" content="An online literary magazine where faith meets art">
