--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
-    <meta property="og:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/>
+    <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://www.canva.com/design/DAF97EossRg/1imOVzP64KxVRcU3anRiyg/view"/>
+    <meta name="twitter:image" content="https://overtlylitlogo.my.canva.site/"/>
     <meta name="twitter:creator" content="@overtlylit" />
     <meta name="twitter:title" content="Overtly Lit">
     <meta name="twitter:description" content="An online literary magazine where faith meets art">
