--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@overtlylit" />
     <meta name="twitter:image" content="https://www.canva.com/design/DAF97ZfOxiA/uwlX6VhH7DbhLBfVZ1HTdg/view"/>
     <meta name="twitter:creator" content="@overtlylit" />
