--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://www.canva.com/design/DAE8dJRN3Ts/5_HuKCt0I6jFe7Y_pQ_9ow/view"></meta>
+    <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/>
     <meta name="twitter:creator" content="@overtlylit" />
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
