--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://www.canva.com/design/DAF97ZfOxiA/uwlX6VhH7DbhLBfVZ1HTdg/view"/>
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
     <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/>
-    <meta name="twitter:creator" content="@overtlylit" />
+    <meta name="twitter:creator" content="@overtlylit" /> -->
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
