--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
 
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
-    
+
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@overtlylit" />
+    <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/>
+    <meta name="twitter:creator" content="@overtlylit" />
+    <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:title" content="Overtly Lit"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
-    <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:image" content="https://www.canva.com/design/DAF97ZfOxiA/uwlX6VhH7DbhLBfVZ1HTdg/view"/>
-    <!-- <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/>
-    <meta name="twitter:creator" content="@overtlylit" /> -->
+
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
