--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/>
+    <!-- <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/> -->
     <meta name="twitter:creator" content="@overtlylit" />
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:title" content="Overtly Lit"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
-    <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/>
+    <!-- <meta property="og:image" content="https://overtlylit.com/images/overtly-logo.jpg"/> -->
 
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
