--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="home-body">
     
     <section class="logo-section">
-        <img href="index.html" class="logo-image" src="images/overtlylogo-lg.png" alt="logo">
+        <img href="index.html" class="logo-image" src="images/overtly-logo.jpg" alt="logo">
         
         <h4 class="tagline">Where faith meets art</h4>
         <div class="socials-header">
