--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <!-- <meta name="twitter:image" content="https://www.canva.com/design/DAFm7NtBDus/MSRHDxou-HgmTK8K-qeN5g/view"/> -->
+    <meta name="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
     <meta name="twitter:creator" content="@overtlylit" />
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:title" content="Overtly Lit"/>
