--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Overtly Lit"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
-    <meta property="og:image" content="https://www.canva.com/design/DAF97ZfOxiA/uwlX6VhH7DbhLBfVZ1HTdg/view"/>
+    <meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
 
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
