--- a/index.html
+++ b/index.html
@@ -13,16 +13,38 @@
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
 
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@overtlylit" />
-    <!-- <meta name="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/> -->
+    <meta name="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
     <meta name="twitter:creator" content="@overtlylit" />
     <meta property="og:url" content="https://www.overtlylit.com"/>
     <meta property="og:title" content="Overtly Lit"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="An online literary magazine where faith meets art"/>
     <meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
+     -->
 
+
+    <!-- Primary Meta Tags -->
+<title>Overtly Lit</title>
+<meta name="title" content="Overtly Lit" />
+<meta name="description" content="An online literary magazine where faith meets art." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="www.overtlylit.com" />
+<meta property="og:title" content="Overtly Lit" />
+<meta property="og:description" content="An online literary magazine where faith meets art." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="www.overtlylit.com" />
+<meta property="twitter:title" content="Overtly Lit" />
+<meta property="twitter:description" content="An online literary magazine where faith meets art." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
