--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <meta property="og:url" content="www.overtlylit.com" />
 <meta property="og:title" content="Overtly Lit" />
 <meta property="og:description" content="An online literary magazine where faith meets art." />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="www.overtlylit.com" />
 <meta property="twitter:title" content="Overtly Lit" />
 <meta property="twitter:description" content="An online literary magazine where faith meets art." />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 
