--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <meta property="og:title" content="Overtly Lit" />
 <meta property="og:description" content="An online literary magazine where faith meets art." />
 <meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
-
+<meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="www.overtlylit.com" />
