--- a/masthead.html
+++ b/masthead.html
@@ -12,6 +12,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alice&family=Architects+Daughter&family=Gotu&family=IM+Fell+English+SC&family=Lato:wght@300&family=Tenor+San&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
 
+
+    <!-- Primary Meta Tags -->
+<title>Overtly Lit</title>
+<meta name="title" content="Overtly Lit" />
+<meta name="description" content="An online literary magazine where faith meets art." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="www.overtlylit.com" />
+<meta property="og:title" content="Overtly Lit" />
+<meta property="og:description" content="An online literary magazine where faith meets art." />
+<meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
+<meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="www.overtlylit.com" />
+<meta property="twitter:title" content="Overtly Lit" />
+<meta property="twitter:description" content="An online literary magazine where faith meets art." />
+<meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
 </head>
 <body>
 
