--- a/issues.html
+++ b/issues.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alice&family=Architects+Daughter&family=Gotu&family=IM+Fell+English+SC&family=Lato:wght@300&family=Tenor+San&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
 
-
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
 </head>
 <body>
