--- a/masthead.html
+++ b/masthead.html
@@ -31,6 +31,8 @@
 <meta property="twitter:title" content="Overtly Lit" />
 <meta property="twitter:description" content="An online literary magazine where faith meets art." />
 <meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
+
+<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
 
