--- a/masthead.html
+++ b/masthead.html
@@ -127,7 +127,7 @@
       <img src="images/sagirah.jpg" class="editor-pic">
       <div class="editor-bio">
         <h2 class="editor-name">Sagirah Shahid</h2>
-        <p>Sagirah Shahid is an African American Muslim poet, arts educator, and performing artist from Minneapolis, MN. Her poetry and prose is published in several literary journals including Mizna, Paper Darts, Khôra, Puerto Del Sol,Winter Tangerine, and elsewhere. When she isn’t creating art, Sagirah celebrates her life exploring poetry with the student-writers of Unrestricted Interest, a writing program and consultancy dedicated to supporting neurodivergent learners through creative writing.</p> 
+        <p>Sagirah Shahid is a pushcart prize nominated Black Muslim poet from Minneapolis, MN. Sagirah is a recipient of several awards and fellowships, including from the Loft Literary Center, Minnesota Center for Book Arts, Twin Cities Media Alliance, Shangri La Museum of Islamic Art, Culture, & Design and Muslim Advocates. Her poems and prose are published in Mizna, Winter Tangerine, Khôra, Puerto Del Sol, Rain Taxi, Juked, Prose Online, Parhelion, About Place Journal, and elsewhere.</p> 
         <p>Sagirah loves reading and listening to a wide variety of poetry. She has a soft spot for purposeful lyric poetry and poems that challenge the conventional boundaries of language and storytelling. From visual poems to ghazals, Sagirah is looking for poems that innovate and resist. Submit your unruly, wild, loud, shy, sly, poetic creations. I want to be challenged. I want to see the heart of your truth transformed on the page.</p>
       </div>
     </div>
