submit page update

--- a/submit.html
+++ b/submit.html
@@ -12,6 +12,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alice&family=Architects+Daughter&family=Gotu&family=IM+Fell+English+SC&family=Lato:wght@300&family=Tenor+San&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8a19042bf4.js" crossorigin="anonymous"></script>
 
+    <!-- Primary Meta Tags -->
+    <title>Overtly Lit</title>
+    <meta name="title" content="Overtly Lit" />
+    <meta name="description" content="An online literary magazine where faith meets art." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="www.overtlylit.com" />
+    <meta property="og:title" content="Overtly Lit" />
+    <meta property="og:description" content="An online literary magazine where faith meets art." />
+    <meta property="og:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
+    <meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png"/>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="www.overtlylit.com" />
+    <meta property="twitter:title" content="Overtly Lit" />
+    <meta property="twitter:description" content="An online literary magazine where faith meets art." />
+    <meta property="twitter:image" content="https://res.cloudinary.com/dysvsnyrg/image/upload/v1709059871/overtlylogo-lg_xun4gk.png" />
+    
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
@@ -59,16 +80,13 @@
     <div class="submit-parent">
 
         <div class="submit-item1"> 
-            <h4 class="notice">We are currently on hiatus but hope to open for submissions in early 2024 and resume our usual publishing schedule after that.</h4>
-            <h5 class="submit-heading">We publish twice a year. Our current publication schedule is:</h5>
-            <p class="sub-heading">June publication:</p>
+            <h4 class="notice">Our submissions are currently closed.</h4>
+            <h5 class="submit-heading">We will update this page when we open submissions. You can also keep an eye out on our social media, <span class="online-form"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="online-form"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</h5>
+            <!-- <p class="sub-heading">June publication:</p>
             <p>Submissions open December 1st to January 31st</p>
-            <p>Reading period February to April</p>
+            <p>Reading period February to April</p> -->
             <!-- <br> -->
-            <p class="sub-heading">December publication:</p>
-            <p>Submissions open July 1st to Aug 1st</p>
-            <p>Reading period August to October</p>
-            <p><b>Please note any work sent outside the submission period will be deleted from our inbox</b></p>
+            <p><b>Please note any work sent to us outside the submission period will be deleted from our inbox</b></p>
         </div>
 
 
