--- a/submit.html
+++ b/submit.html
@@ -81,7 +81,7 @@
 
         <div class="submit-item1"> 
             <h4 class="notice">Our submissions are currently closed.</h4>
-            <h5 class="submit-heading">We will update this page when we open submissions. You can also keep an eye out on our social media, <span class="online-form"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="online-form"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</h5>
+            <h5 class="sub-heading">We will update this page when we open submissions. You can also keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="online-form"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</h5>
             <!-- <p class="sub-heading">June publication:</p>
             <p>Submissions open December 1st to January 31st</p>
             <p>Reading period February to April</p> -->
