--- a/submit.html
+++ b/submit.html
@@ -80,8 +80,16 @@
     <div class="submit-parent">
 
         <div class="submit-item1"> 
-            <h4 class="notice">Our submissions are currently closed.</h4>
-            <p>We will update this page when we open submissions. You can keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="social-links"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</p>
+            <h4 class="notice">Submissions are open for Issue 4 from the 13th of May and will close on the 26th May at midnight BST. Issue 4 will be a themed issue focusing on Faith and Injustice</h4>
+            <h4>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" href="https://docs.google.com/forms/d/1ZsyfSoG1oyeUEnxkCfLCZJRtVPy0ESz_SAw2RNafS-g/edit">online form</a></h4>
+
+            <p>The usual submission guidelines apply but the theme is specifically focused on <span class="bold">faith and the resistance to oppression, injustice and colonisation.</span></p>
+            <p>You may interpret this as you wish. We want to see your hope and anger intertwined in your poetry, speculative futures painted in your narratives, the rhythm of love and the fire of compassion in all your words.</p>
+            <p>As we are a magazine dedicated to merging faith with art, we ask that your pieces reflect this.</p>
+
+            <!-- <p>We will update this page when we open submissions. You can keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="social-links"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</p> -->
+            
+            
             <!-- <p class="sub-heading">June publication:</p>
             <p>Submissions open December 1st to January 31st</p>
             <p>Reading period February to April</p> -->
