--- a/submit.html
+++ b/submit.html
@@ -81,7 +81,7 @@
 
         <div class="submit-item1"> 
             <h4 class="notice">Submissions are open for Issue 4 from the 13th of May and will close on the 26th May at midnight bst. Issue 4 will be a themed issue focusing on Faith and Injustice.</h4>
-            <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" href="https://docs.google.com/forms/d/1ZsyfSoG1oyeUEnxkCfLCZJRtVPy0ESz_SAw2RNafS-g/edit">online form.</a></p>
+            <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" href="https://docs.google.com/forms/d/1ZsyfSoG1oyeUEnxkCfLCZJRtVPy0ESz_SAw2RNafS-g/edit">online form</a>.</p>
             <br>
             <p>The usual submission guidelines apply but the theme is specifically focused on <span class="bold">faith and the resistance to oppression, injustice and colonisation.</span></p>
             <p>You may interpret this as you wish. We want to see your hope and anger intertwined in your poetry, speculative futures painted in your narratives, the rhythm of love and the fire of compassion in all your words.</p>
