--- a/submit.html
+++ b/submit.html
@@ -131,7 +131,7 @@
 
         <h2 class="submit-heading">Guidelines:</h2>
         <ol>
-            <li>Submit your work through our <a class="online-form" target="_blank" rel="noopener" href="https://docs.google.com/forms/d/1ZsyfSoG1oyeUEnxkCfLCZJRtVPy0ESz_SAw2RNafS-g/">online form</a></li>
+            <li>Submit your work through our <a class="online-form" target="_blank" rel="noopener" href="https://forms.gle/RoP2Papftq84hezj7">online form</a></li>
             <li>Please use a standard font and size with your name on the work.</li>
             <li>Please make sure your work is <span class="bold">PROOFREAD</span> as much as possible.</li>
             <li>You can submit up to 3 pieces of work per issue (we will only publish one per issue). Please check the poetry section for specific requirements. </li>
