--- a/submit.html
+++ b/submit.html
@@ -80,7 +80,7 @@
     <div class="submit-parent">
 
         <div class="submit-item1"> 
-            <h4 class="notice">Submissions are open for Issue 4 from the 13th of May and will close on the 26th May at midnight bst. Issue 4 will be a themed issue focusing on Faith and Injustice.</h4>
+            <h4 class="notice">The submission window for Issue 4 will close on the 31st May at midnight bst. Issue 4 will be a themed issue focusing on Faith and Injustice.</h4>
             <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" target="_blank" rel="noopener" href="https://forms.gle/RoP2Papftq84hezj7">online form</a>.</p>
             <br>
             <p>The usual submission guidelines apply but the theme is specifically focused on <span class="bold">faith and the resistance to oppression, injustice and colonisation.</span></p>
