--- a/submit.html
+++ b/submit.html
@@ -80,12 +80,10 @@
     <div class="submit-parent">
 
         <div class="submit-item1"> 
-            <h4 class="notice">The submission window for Issue 4 will close on the 31st May at midnight bst. Issue 4 will be a themed issue focusing on Faith and Injustice.</h4>
-            <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" target="_blank" rel="noopener" href="https://forms.gle/RoP2Papftq84hezj7">online form</a>.</p>
+            <h4 class="notice">The submission window is now closed. We are currently reading submissions for Issue 4.</h4>
+            <p>Thank you to everyone who submitted work for Issue 4! We aim to send out responses around the beginning of July but this may change.</p>
+            <!-- <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" target="_blank" rel="noopener" href="https://forms.gle/RoP2Papftq84hezj7">online form</a>.</p> -->
             <br>
-            <p>The usual submission guidelines apply but the theme is specifically focused on <span class="bold">faith and the resistance to oppression, injustice and colonisation.</span></p>
-            <p>You may interpret this as you wish. We want to see your hope and anger intertwined in your poetry, speculative futures painted in your narratives, the rhythm of love and the fire of compassion in all your words.</p>
-            <p>As we are a magazine dedicated to merging faith with art, we ask that your pieces reflect this.</p>
 
             <!-- <p>We will update this page when we open submissions. You can keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="social-links"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</p> -->
             
