--- a/index.html
+++ b/index.html
@@ -105,23 +105,26 @@
     <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 text-center">
-            <img src="images/issue-three-cover.png" class="cover-image">
+            <img src="images/issue-four-cover.jpeg" class="cover-image">
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 text-column text-center">
-            <h4 class="feature-header">Issue Three Out Now!</h4>
-            <h5 class="feature-text">Read our latest issue, browse pieces on our website under 'Read' or download the shiny PDF to read on your device.</h5>
-            <a target="_blank" rel="noopener" href="PDFs/issue-three-pdf.pdf" download="issue-three-pdf" class="btn-design btn-text feature-text">Download PDF</a>
+            <h4 class="feature-header">Issue Four Out Now!</h4>
+            <h5 class="feature-text">Read our latest issue, download the shiny PDF to read on your device.</h5>
+            <a target="_blank" rel="noopener" href="PDFs/issue-four-pdf.pdf" download="issue-four-pdf" class="btn-design btn-text feature-text">Download PDF</a>
             <div class="authors-container">
-                <p>Sanaa Hyder, Elisha Oluyemi, Checca Aird, Talia BarNoy, Sarah Das Gupta,
-                  Farzana A Ghani, Judy Lunsford, Maggie Nerz Iribarne, Zary Fekete,
-                  Paul Hostovsky, Sarah Jasat, Chris Cottom, Emily Holi,
-                  Khadija Shafi, Christ Keivom, Renee Sande, Jean Gismervik, Richard Puglisi,
-                  Irina Novikova, Edward Lee, Jill Vance, Martine Rancarani, Gregg Voss,
-                  Bharti Bansal, Liu Chen, Ahmad Addam, Maryrose Nelson, Emma McCoy,
-                  Monica Fuglei, Sadiq Abdulsalam Adeiza, Monica Prince, Richard Simonds,
-                  Fred Pierre, Amenah Syed, Karabo Khatleli, Shane Shick, Ryan Keating,
-                  Thalib Razi, Erin Jamieson, Kendra Whitfield, Humairah Jamil,
-                  Abasiama Udom, Ellora Lawhorn</p>
+                <p>Agboola Tariq A., Yasmin Ayub, Ahmad
+                  Addam, John Chinaka Onyeche, D.W.
+                  Baker, Nwodo Divine, Ronnie K. Stephens,
+                  Grant Shimmin, Katey Funderburgh,
+                  Cadı, Fatima Hanan Elreda, Karen Grace
+                  Soans, Jaweerya Mohammad, Mediah
+                  Ahmed, Michelle Williams, Liz Kendall,
+                  Mateo Perez Lara, Sana Wazwaz, Irina
+                  Tall Novikova, Sumaiyah Mohamed, Kris
+                  Evans, Brooksie C. Fontaine, Jibril
+                  Stevenson, Patty Somlo, Zohra Melik,
+                  Allison Wall, Susan Lanigan, Rania El-
+                  Badry, Mona Zaneefern</p>
               </div>
         </div>
     </div>
@@ -130,8 +133,8 @@
     <div class="row">
         <div class="col-12">
             <div class="spotlight">
-              <h2 class="monthly-feature-title">Monthly Features</h2>
-              <p class="monthly-feature-text">Each month we feature a piece short fiction, an essay, a poem and a piece of artwork from one of our previous issues. Check out the wonderful pieces below.</p>
+              <h2 class="monthly-feature-title">Featured Work</h2>
+              <p class="monthly-feature-text">Available to read on our website, a featured piece short fiction, an essay, a poem and a piece of artwork from one of our previous issues. Check out the wonderful pieces below.</p>
               </div>
               <hr class="home-hr">
               <div class="spotlight">
