--- a/issues.html
+++ b/issues.html
@@ -96,6 +96,17 @@
           <a class="btn-design btn-text" target="_blank" rel="noopener" href="PDFs/issue-three-pdf.pdf" download="issue-three-pdf">Download PDF</a>
           </div>
     </div>
+
+    <div class="row issue-box">
+          
+      <div class="col-lg-6 col-md-6 col-sm-12 text-lg-end text-md-end text-sm-center text-col-center">
+        <img src="images/issue-four-cover.jpeg" class="issues-cover">
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 text-lg-start text-md-start text-sm-center text-col-center">
+        <h4 class="issue-number">Issue Four</h4>
+        <a class="btn-design btn-text" target="_blank" rel="noopener" href="PDFs/issue-four-pdf.pdf" download="issue-four-pdf">Download PDF</a>
+        </div>
+  </div>
         
 
       </div>
