--- a/submit.html
+++ b/submit.html
@@ -80,12 +80,12 @@
     <div class="submit-parent">
 
         <div class="submit-item1"> 
-            <h4 class="notice">The submission window is now closed. We are currently reading submissions for Issue 4.</h4>
-            <p>Thank you to everyone who submitted work for Issue 4! We aim to send out responses around the beginning of July but this may change.</p>
+            <h4 class="notice">Our submissions are currently closed.</h4>
+            <!-- <p>Thank you to everyone who submitted work for Issue 4! We aim to send out responses around the beginning of July but this may change.</p> -->
             <!-- <p>Please ensure you submit your work through our <a class="online-form" target="_blank" rel="noopener" target="_blank" rel="noopener" href="https://forms.gle/RoP2Papftq84hezj7">online form</a>.</p> -->
             <br>
 
-            <!-- <p>We will update this page when we open submissions. You can keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="social-links"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</p> -->
+            <p>We will update this page when we open submissions. You can keep an eye out on our social media, <span class="social-links"><a target="_blank" rel="noopener" href="https://twitter.com/overtlylit">Twitter</a></span> and <span class="social-links"><a target="_blank" rel="noopener" href="https://instagram.com/overtlylit">Instagram</a></span>, where we will announce any submission windows.</p>
           
             <p><b>Please note any work sent to us outside the submission period will be deleted from our inbox</b></p>
         </div>
