--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12 text-center">
-            <img src="images/issue-four-cover.jpeg" class="cover-image">
+            <img src="images/issue-4-cover.jpeg" class="cover-image">
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 text-column text-center">
             <h4 class="feature-header">Issue Four Out Now!</h4>
