--- a/issues.html
+++ b/issues.html
@@ -100,7 +100,7 @@
     <div class="row issue-box">
           
       <div class="col-lg-6 col-md-6 col-sm-12 text-lg-end text-md-end text-sm-center text-col-center">
-        <img src="images/issue-four-cover.jpeg" class="issues-cover">
+        <img src="images/issue-4-cover.jpeg" class="issues-cover">
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 text-lg-start text-md-start text-sm-center text-col-center">
         <h4 class="issue-number">Issue Four</h4>
