--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="col-12">
             <div class="spotlight">
               <h2 class="monthly-feature-title">Featured Work</h2>
-              <p class="monthly-feature-text">Available to read on our website, a featured piece short fiction, an essay, a poem and a piece of artwork from one of our previous issues. Check out the wonderful pieces below.</p>
+              <p class="monthly-feature-text">Available to read on our website, features from one of our previous essays. A short story, an essay, a poem and a piece of artwork to give you a taste of the work we publish; so much more of which you can find in our full issues. Check out the wonderful pieces below.</p>
               </div>
               <hr class="home-hr">
               <div class="spotlight">
