--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   Evans, Brooksie C. Fontaine, Jibril
                   Stevenson, Patty Somlo, Zohra Melik,
                   Allison Wall, Susan Lanigan, Rania El-
-                  Badry, Mona Zaneefern</p>
+                  Badry, Mona Zaneefer</p>
               </div>
         </div>
     </div>
